Attempt to fix allauth-container overflow on footer on all authentification templates.

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -609,6 +609,10 @@ figure .wrap_img {
     body {
     height: calc(100vh - 164px);
   }
+
+  .allauth-container {
+      height: 100vh;
+  }
 }
 
 @media screen and (min-width: 1466px) {
